rpc-reverse/app/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  name: solana-rpc-reverse
spec:
  replicas: 0
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: solana-rpc-reverse
  template:
    metadata:
      labels:
        app: solana-rpc-reverse
    spec:
      containers:
      - name: nginx
        image: nginx:1.21.6-alpine
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /etc/nginx/templates
          readOnly: true
          name: nginx-conf
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
            items:
              - key: default.conf.template
                path: default.conf.template
---
apiVersion: v1
kind: Service
metadata:
  name: solana-rpc-reverse
spec:
  selector:
    app: solana-rpc-reverse
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
