rpc-reverse/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "solana-client,DNT,X-CustomHeader,X-LANG,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,X-Api-Key,X-Device-Id,Access-Control-Allow-Origin"
  name: mainnet-rpc
  namespace: mainnet-solana
spec:
  ingressClassName: nginx
  rules:
  - host: rpc.mainnet.holaplex.tools
    http:
      paths:
      - backend:
          service:
            name: solana-rpc-reverse
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - rpc.mainnet.holaplex.tools
    secretName: rpc-mainnet-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "solana-client,DNT,X-CustomHeader,X-LANG,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,X-Api-Key,X-Device-Id,Access-Control-Allow-Origin"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: solana-rpc-reverse
  name: mainnet-ws
  namespace: mainnet-solana
spec:
  ingressClassName: nginx
  rules:
  - host: rpc.mainnet.holaplex.tools
    http:
      paths:
      - backend:
          service:
            name: solana-rpc-reverse
            port:
              number: 80
        path: /ws
        pathType: Prefix
  tls:
  - hosts:
    - rpc.mainnet.holaplex.tools
    secretName: rpc-mainnet-tls
